# Node-Based-Image-Manipulation-Interface

./: CMakeLists.txt  README.md
build_old/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NodeEditor.sln  NodeEditor.vcxproj  NodeEditor.vcxproj.filters  ZERO_CHECK.vcxproj
build_old/Debug/: NodeEditor.json  imgui.ini
build_old/NodeEditor.dir/Debug/NodeEditor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_old/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_old/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_old/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
src/: main.cpp
src/core/: Node.h  NodeGraph.cpp  NodeGraph.h
src/nodes/: BrightnessContrastNode.cpp  BrightnessContrastNode.h  ColorChannelSplitterNode.cpp  ColorChannelSplitterNode.h  ImageInputNode.cpp  ImageInputNode.h  OutputNode.cpp  OutputNode.h
